syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "UserProto";

service UserService {
  rpc GetUserById (GetUserRequest) returns (UserResponse);
  rpc GetAllUsers (Empty) returns (stream UserResponse);
}

message GetUserRequest {
  string userId = 1;
}

message UserResponse {
  string id = 1;
  string username = 2;
}

message Empty {}
